8073476: G1 logging ignores changes to PrintGC* flags via MXBeans

Reviewed-by: brutisso, jwilhelm